2009-06-03  Marek Habersack  <mhabersack@novell.com>

	* MonoSettingsSection.cs: added new property,
	verificationCompatibility, which serves the same purpose as the
	registry key described in http://support.microsoft.com/kb/932552
	(when set to 1 it turns off virtual path validity
	verification). Fixes bug #509163

2009-05-14  Marek Habersack  <mhabersack@novell.com>

	* HttpHandlersSection.cs: if we're matching a default handler,
	disallow caching.

2009-04-03  Marek Habersack  <mhabersack@novell.com>

	* WebConfigurationManager.cs: added code in the static constructor
	to enable retrieving application settings via
	ApplicationSettingsBase from within asp.net applications. Fixes
	bug #491531

	* ApplicationSettingsConfigurationFileMap.cs: added.

2009-03-12  Dean Brettle  <dean@brettle.com>

	* nBrowser/Build.cs: made Browser() method thread-safe and moved the
	actual tree creation to a private InitializeTree() method for clarity.

2009-03-01  Marek Habersack  <mhabersack@novell.com>

	* WebConfigurationManager.cs: optimized GetWebApplicationSection a
	bit

2009-02-28  Marek Habersack  <mhabersack@novell.com>

	* WebConfigurationManager.cs: make sure no nrex happens in
	GetSectionCacheKey ()

2009-02-26 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* WebConfigurationManager.cs: generate a hash from the string hsah
	codes instead of concatenating them.

2009-01-27  Marek Habersack  <mhabersack@novell.com>

	* HttpHandlerAction.cs: removed the matches cache, it doesn't
	improve matters here in 99% of the cases.
	Regexps are no longer used to match handler paths, SearchPattern
	is used instead.

2009-01-26  Marek Habersack  <mhabersack@novell.com>

	* WebConfigurationHost.cs: when an attempt to map a fake virtual
	path is made, MapPath returns the aplication physical root
	directory. Fixes bug #463950

2008-01-09  Dean Brettle  <dean@brettle.com>

	* nBrowser/Node.cs: Fixed compatibility bug where <identification> sections were required
	in browser defs.  
